# hse_applied_python_fastApi_project

./: .dockerignore  Dockerfile  README.md  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
app/: main.py  utils.py
app/pages/: app.py  auth.py
